@@ -2,6 +2,8 @@ Version Next
 
     - Renamed SpringVaadinSession -> SpringVaadinSessionListener
       NOTE: the above are backward-incompatible changes.
+    - Add new servlet init params "sessionTracking" and "maxSessions"
+    - Added VaadinSessionContainer
     - Added PersistentObjectTransactionManager and @PersistentObjectTransactional
     - Added ProcessRunner.handleInterruption()
     - Added SortingPropertyExtractor.
